Improved auth container layout and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <div class="auth-container">
             <div id="whenSignedOut">
-                <button id="signInBtn" class="auth-btn">Sign in with Google</button>
+                <button id="signInBtn" class="auth-btn">
+                    <img src="https://www.google.com/favicon.ico" alt="Google" width="20" height="20">
+                    Sign in with Google
+                </button>
             </div>
             <div id="whenSignedIn" hidden>
                 <div id="userDetails"></div>
