--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books To Be Read</title>
+    <title>Future Reads</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <button id="signOutBtn" class="auth-btn">Sign Out</button>
             </div>
         </div>
-        <h1>Books To Be Read</h1>
+        <h1>Future Reads</h1>
         
         <form id="bookForm" class="book-form">
             <input 
